--- a/templates/site/views/index.html.twig
+++ b/templates/site/views/index.html.twig
@@ -1,79 +1,128 @@
 {% extends 'base.html.twig' %}
-{% block content %}
+{% block conteudo %}
 
 <div class="container my-5">
 
     <div class="row">
         <div class="col-lg-9 col-md-12">
 
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            {% if posts.slides %}
+            <div id="slide" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    {% for slide in slids %}
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{loop.index0}}" {% if loop.index0 == 0 %}class="active" {%endif%} aria-current="true" aria-label="Slide 1"></button>
+                    {% for slide in posts.slides %}
+                    <button type="button" data-bs-target="#slide" data-bs-slide-to="{{loop.index0}}" {% if loop.index0 == 0 %}class="active" {%endif%} aria-current="true" aria-label="{{slide.title}}"></button>
                     {% endfor %}
                 </div>
                 <div class="carousel-inner">
-                    {% for slide in slids %}
-                    <div class="carousel-item {% if loop.index0 == 0 %}active{%endif%}">
-                        <img src="{{url('uploads/files/'~slide.cover)}}" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>{{slide.title}}</h5>
-                            {# <p>Some representative placeholder content for the first slide.</p> #}
-                        </div>
-                    </div>
-
-                    {% endfor %}
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-
-
-            {% if posts %}
-            <div class="row">
-                {% for post in posts %}
-                <div class="col-md-6 mb-4">
-                    <div class="card border-0 h-100">
-                        <div class="card-body">
-                            <a href="{{url('post/'~post.slug)}}" tooltip="tooltip" title="{{post.title}}">
-                                {% if post.cover %}
-                                <img src="{{url('uploads/files/'~post.cover)}}" alt="{{post.title}}" title="{{post.title}}" class="capaGrande mb-3"/>
+                    {% for slide in posts.slides %}
+                    {% if loop.index0 == 0 %}
+                    <div class='carousel-item active'> 
+                        {%else%}
+                        <div class='carousel-item'>
+                            {%endif%}
+                            <a href="{{url('post/'~slide.slug)}}" tooltip="tooltip" title="{{slide.title}}">
+                                {% if slide.cover %}
+                                <img src="{{url('uploads/files/'~slide.cover)}}" class="d-block w-100" alt="{{slide.title}}">
                                 {% endif %}
-
-                                <h4 class="card-title">{{post.title}}</h4>
-
-                                <div class="d-flex justify-content-between my-3 text-muted">
-                                    <small>{{post.category.title |upper}}</small>
-                                    <small>{{ countTime(post.created_at) }}</small>
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>{{slide.title}}</h5>
+                                    <p>{{summarizeText(slide.text, 100) |raw}}</p>
                                 </div>
-
-                                <p class="card-text">{{summarizeText(post.text, 150)}}</p>
                             </a>
                         </div>
+                        {% endfor %}
                     </div>
-                </div>    
-                {% endfor %}
-            </div>
-            {% else %}
-            <div class="alert alert-warning" role="alert">
-                Nenhum post cadastrado para exibir!
-            </div>
-            {% endif %}
+                    <button class="carousel-control-prev" type="button" data-bs-target="#slide" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#slide" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                {% else %}
+                <div class="alert alert-warning" role="alert">
+                    Nenhum slide cadastrado para exibir!
+                </div>
+                {% endif %}
 
-        </div>
+                {% if posts %}
+                <div class="row mt-5">
+                    {% for post in posts.posts %}
+                    <div class="col-md-6 mb-4">
+                        <div class="card border-0 h-100">
+                            {% if post.cover %}
+                            <a href="{{url('post/'~post.slug)}}" tooltip="tooltip" title="{{post.title}}">
+                                <img src="{{url('uploads/files/thumbs/'~post.cover)}}" alt="{{post.title}}" title="{{post.title}}" class="coverGrande card-img-top p-3"/>           
+                            </a>
+                            {% endif %}
+                            <div class="card-body">
+                                <a href="{{url('post/'~post.slug)}}" tooltip="tooltip" title="{{post.title}}">
 
-        <div class="col-lg-3">
-            {% include'sidebar.html.twig '%}
+                                    <h4 class="card-title">{{post.title}}</h4>
+
+                                    <div class="d-flex justify-content-between my-3 text-muted">
+                                        <small>{{post.categoria.title |upper}}</small>
+                                        <small>{{ countTime(post.cadastrado_em) }}</small>
+                                    </div>
+
+                                    <p class="card-text">{{summarizeText(post.text, 150)}}</p>
+                                </a>
+                                {% if user().level == 3 %}
+                                <div class="card-footer border-0 bg-transparent text-secondary text-end">
+                                    <a href="{{ url('admin/posts/editar/'~post.id) }}" tooltip="tooltip" title="Editar">
+                                        <i class="fa-solid fa-pen m-1"></i>
+                                    </a>
+                                    <a href="{{ url('admin/posts/deletar/'~post.id) }}" tooltip="tooltip" title="Deletar">
+                                        <i class="fa-solid fa-trash m-1"></i>
+                                    </a>
+                                </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>    
+                    {% endfor %}
+                </div>
+                {% else %}
+                <div class="alert alert-warning" role="alert">
+                    Nenhum post cadastrado para exibir!
+                </div>
+                {% endif %}
+            </div>
+
+            <div class="col-lg-3">
+                {% include'sidebar.html '%}
+
+                <div class="card mb-4">
+                    <div class="card-header fw-bold bg-white text-secondary">
+                        Mais Lidos
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            {% for post in posts.maisLidos %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <a href="{{url('post/'~post.slug)}}" class="fw-bold" tooltip="tooltip" title="{{post.title}}">
+                                    <div class="d-flex align-items-center">
+                                        <div class="fw-bold fs-1 text-secondary">
+                                            {{loop.index}}
+                                        </div>
+
+                                        <div class="ms-3">
+                                            <p class="fw-bold mb-1">{{post.title}}</p>
+                                        </div>
+                                    </div>
+
+                                </a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
 
-</div>
-
-{% endblock %}
+    {% endblock %}
