--- a/templates/admin/views/posts/posts.html.twig
+++ b/templates/admin/views/posts/posts.html.twig
@@ -5,7 +5,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="{{url('admin/dashboard')}}">
-                Home
+                Dashboard
             </a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
@@ -18,12 +18,14 @@
 
 <div class="card border-0 shadow-sm">
     <div class="card-header bg-white border-0 d-flex justify-content-between align-items-center">
-         <div>
+        <div>
             <span class="badge rounded text-bg-secondary">{{total.posts}} posts</span> 
             <span class="badge rounded text-bg-success">{{total.postsActive}} ativo</span> 
             <span class="badge rounded text-bg-danger">{{total.postsInactive}} inativo</span> 
         </div>
-        <a href="{{url('admin/posts/add')}}" class="btn btn-primary">Cadastrar</a>
+        <a href="{{url('admin/posts/add')}}" class="btn btn-dark" tooltip="tooltip" title="Cadastrar Post">
+            Cadastrar
+        </a>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -31,19 +33,36 @@
                 <thead>
                     <tr>
                         <th>id</th>
+                        <th>Capa</th>
                         <th>Título</th>
                         <th class="text-center">Categoria</th>
+                        <th class="text-center">Visitas</th>
                         <th class="text-center">Status</th>
-                        <th class="text-center">Views</th>
                         <th class="text-center">Ação</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="align-middle">
                     {% for post in posts %}
                     <tr>
                         <th>{{post.id}}</th>
-                        <td>{{post.title}}</td>
-                        <td class="text-center">{{post.category.title}} </td>
+                        <th>
+                            {% if post.cover %}
+                            <div class="float-xl-start float-lg-none capa mx-auto">
+                            <div class="card border-0">
+                                <a data-fancybox data-caption="{{post.title}}" class="overflow zoom " href="{{url('uploads/files/thumbs/'~post.cover)}}">
+                                    <img src="{{url('uploads/files/thumbs/'~post.cover)}}" />
+                                </a>
+                            </div>
+                        </div>
+                        {% else %}
+                        <img src="{{url('templates/admin/assets/img/semcapa.png')}}" class="capa" />
+                        {% endif %} 
+                        </th>
+                        <td class="fw-bold">
+                            {{post.title}}
+                        </td>
+                        <td class="text-center"> {{post.category.title}}</td>
+                        <td class="text-center">{{post.views}}</td>
                         <td class="text-center">
                             {% if post.status == 1 %}
                             <i class="fa-solid fa-circle text-success" tooltip="tooltip" title="Ativo"></i>
@@ -51,34 +70,42 @@
                             <i class="fa-solid fa-circle text-danger" tooltip="tooltip" title="Inativo"></i>
                             {% endif %}
                         </td>
-                        <td class="text-center">{{post.views}}</td>
                         <td class="text-center">
                             <a href="#info{{post.id}}" data-bs-toggle="offcanvas" tooltip="tooltip" title="Status">
-                                <i class="fa-solid fa-arrow-trend-up"></i>
-                            </a>    
-                            <a href="{{ url('admin/posts/edit/'~post.id)}}" tooltip="tooltip" title="Editar">
+                                <i class="fa-solid fa-chart-simple"></i>
+                            </a>
+
+                            <a href="{{ url('admin/posts/edit/'~post.id) }}" tooltip="tooltip" title="Editar">
                                 <i class="fa-solid fa-pen m-1"></i>
                             </a>
-                            <a href="{{ url('admin/posts/delete/'~post.id)}}" tooltip="tooltip" title="Deletar">
+                            <a href="{{ url('admin/posts/delete/'~post.id) }}" tooltip="tooltip" title="Deletar">
                                 <i class="fa-solid fa-trash m-1"></i>
-                            </a>  
+                            </a>
+
                         </td>
                     </tr>
-                    <div class="offcanvas offcanvas-start" tabindex="-1" id="info{{post.id}}">
+
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="info{{post.id}}">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasExampleLabel">{{post.title}}</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
+                        {% if post.cover %}
+                        <a data-fancybox data-caption="{{post.title}}" class="overflow zoom " href="{{url('uploads/files/'~post.cover)}}">
+                            <img src="{{url('uploads/files/'~post.cover)}}" />
+                        </a>
+                        {% endif %}
+
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                                 Cadastrado em: {{ post.created_at|date("d/m/Y H:i:s") }}
                             </li>
                             <li class="list-group-item">
-                                Atualizado em: {{post.update_at}}
+                                Atualizado em: {%if post.update_at %}{{post.update_at|date("d/m/Y H:i:s")}}{%else%}Nunca{%endif%}
                             </li>
                             <li class="list-group-item">
-                                Última visita em: {{post.last_views}}
+                                Última visita em: {%if post.last_views %}{{post.last_views|date("d/m/Y H:i:s")}}{%else%}Nunca{%endif%}
                             </li>
                             <li class="list-group-item">
                                 Cadastrado por: <b>{{post.user.name}}</b>
@@ -86,7 +113,8 @@
                         </ul>
                     </div>
                 </div>
-                    {%endfor%}
+
+                {%endfor%}
                 </tbody>
             </table>
         </div>     
