--- a/templates/admin/views/footer.html.twig
+++ b/templates/admin/views/footer.html.twig
@@ -1,3 +1,8 @@
+{% if user().level == 3 %}
+  <div class="alert alert-warning" role="alert">
+    Carregado em {{timeStart()}}
+  </div>
+{% endif %}
 <footer class="footer pt-3">
     <div class="container-fluid">
         <div class="row text-muted copyright">
