--- a/templates/site/views/footer.html.twig
+++ b/templates/site/views/footer.html.twig
@@ -1,3 +1,8 @@
+{% if user().level == 3 %}
+  <div class="alert alert-warning" role="alert">
+    Carregado em {{timeStart()}}
+  </div>
+{% endif %}
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top text-bg-dark">
   <p class="col-md-4 mb-0 text-muted">
     &copy;2021 -
