--- a/templates/site/views/sidebar.html.twig
+++ b/templates/site/views/sidebar.html.twig
@@ -1,11 +1,24 @@
-<h4 class="text-center fw-bold">
-    Categorias
-</h4>
-<ul class="list-group list-group-flush">
-    {% for category in categories %}
-        <a href="{{url('category/'~category.slug)}}" class="list-group-item list-group-item-action">
-            {{ category.title  }}
-        </a>
-    {% endfor %}
-</ul>
-
+<div class="card mb-4">
+    <div class="card-header fw-bold bg-white text-secondary">
+        Categorias
+    </div>
+    <div class="card-body">
+        <ul class="list-group list-group-flush">
+            {% for category in categories %}
+            <li class="list-group-item d-flex justify-content-between">
+                <a href="{{url('categoria/'~categoria.slug)}}" class="fw-bold" tooltip="tooltip" title="{{ category.title }}">
+                    {{ category.title }}
+                </a>
+                <div class="fw-normal">
+                    <a href="{{ url('admin/category/edit/'~category.id) }}" tooltip="tooltip" title="Editar">
+                        <i class="fa-solid fa-pen m-1"></i>
+                    </a>
+                    <a href="{{ url('admin/category/delete/'~category.id) }}" tooltip="tooltip" title="Deletar">
+                        <i class="fa-solid fa-trash m-1"></i>
+                    </a>
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
