--- a/templates/site/views/index.html.twig
+++ b/templates/site/views/index.html.twig
@@ -63,7 +63,7 @@
                                     <h4 class="card-title">{{post.title}}</h4>
 
                                     <div class="d-flex justify-content-between my-3 text-muted">
-                                        <small>{{post.categoria.title |upper}}</small>
+                                        <small>{{post.categories.title |upper}}</small>
                                         <small>{{ countTime(post.created_at) }}</small>
                                     </div>
 
