--- a/templates/admin/views/footer.html.twig
+++ b/templates/admin/views/footer.html.twig
@@ -12,17 +12,22 @@
             <div class="col-6 text-end">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a class="text-muted" href="{{url('admin/posts/listar')}}" tooltip="tooltip" title="Administração de Posts">
+                        <a class="text-muted" href="{{url('/')}}" tooltip="tooltip" title="Administração de Posts">
+                            Blog
+                        </a>
+                    </li> 
+                    <li class="list-inline-item">
+                        <a class="text-muted" href="{{url('admin/posts/lists')}}" tooltip="tooltip" title="Administração de Posts">
                             Posts
                         </a>
                     </li> 
                     <li class="list-inline-item">
-                        <a class="text-muted" href="{{url('admin/categorias/listar')}}" tooltip="tooltip" title="Administração de Categorias">
+                        <a class="text-muted" href="{{url('admin/categories/lists')}}" tooltip="tooltip" title="Administração de Categorias">
                             Categorias
                         </a>
                     </li> 
                     <li class="list-inline-item">
-                        <a class="text-muted" href="{{url('admin/users/listar')}}" tooltip="tooltip" title="Administração de Usuários">
+                        <a class="text-muted" href="{{url('admin/users/lists')}}" tooltip="tooltip" title="Administração de Usuários">
                             Usuários
                         </a>
                     </li> 
