--- a/templates/admin/views/header.html.twig
+++ b/templates/admin/views/header.html.twig
@@ -3,7 +3,7 @@
         <label for="menu">
             <i class="fa-solid fa-bars-staggered" tooltip="tooltip" title="MENU"></i>
         </label>
-        <a href="{{url()}}" class="text-secondary fs-4 mb-2">
+        <a href="{{url('admin/dashboard')}}" class="text-secondary fs-4 mb-2">
             <i class="fa-solid fa-house"></i>
         </a>
     </h2>
