--- a/templates/admin/views/categories/listar.html.twig
+++ b/templates/admin/views/categories/listar.html.twig
@@ -28,7 +28,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-hover" id="entity">
+            <table class="table table-hover entity" >
                 <thead>
                     <tr>
                         <th>id</th>
