--- a/templates/admin/views/users/listar.html.twig
+++ b/templates/admin/views/users/listar.html.twig
@@ -37,7 +37,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-hover">
+            <table class="table table-hover entity">
                 <thead>
                     <tr>
                         <th>id</th>
