--- a/templates/site/views/footer.html.twig
+++ b/templates/site/views/footer.html.twig
@@ -8,10 +8,10 @@
 
         <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item">
-                <a href="{{ url() }}" class="nav-link px-2 text-muted" tooltip="tooltip" title="Página Inicial">Home</a>
+                <a href="{{ url('/') }}" class="nav-link px-2 text-muted" tooltip="tooltip" title="Página Inicial">Home</a>
             </li>
             <li class="nav-item">
-                <a href="{{ url('sobre-nos') }}" class="nav-link px-2 text-muted" tooltip="tooltip" title="Sobre Nós">Sobre nós</a>
+                <a href="{{ url('/sobre') }}" class="nav-link px-2 text-muted" tooltip="tooltip" title="Sobre Nós">Sobre nós</a>
             </li>            
         </ul>
     </div>
