--- a/templates/admin/views/posts/listar.html copy.twig
+++ b/templates/admin/views/posts/listar.html copy.twig
@@ -23,7 +23,7 @@
             <span class="badge rounded text-bg-success">{{count.postsAtivo}} ativo</span> 
             <span class="badge rounded text-bg-danger">{{count.postsInativo}} inativo</span> 
         </div>
-        <a href="{{url('admin/posts/cadastrar')}}" class="btn btn-dark" tooltip="tooltip" title="Cadastrar Post">
+        <a href="{{url('admin/posts/add')}}" class="btn btn-dark" tooltip="tooltip" title="Cadastrar Post">
             Cadastrar
         </a>
     </div>
@@ -58,7 +58,7 @@
                             <div class="float-xl-start float-lg-none cover mx-auto">
                                 <div class="card border-0">
                                     <a data-fancybox data-caption="{{post.title}}" class="overflow zoom" >
-                                    <img src="{{url('templates/admin/assets/img/semcapa.png')}}" class="capa" />
+                                    <img src="{{url('templates/admin/assets/img/semcapa.png')}}" class="cover-img " />
                                     </a>
                                 </div>
                             </div>
@@ -79,19 +79,7 @@
                             <i class="fa-solid fa-circle text-danger" tooltip="tooltip" title="Inativo"></i>
                             {% endif %}
                         </td>
-                        <td class="text-center">
-                            <a href="#info{{post.id}}" data-bs-toggle="offcanvas" tooltip="tooltip" title="Status">
-                                <i class="fa-solid fa-chart-simple"></i>
-                            </a>
-
-                            <a href="{{ url('admin/posts/edit/'~post.id) }}" tooltip="tooltip" title="Editar">
-                                <i class="fa-solid fa-pen m-1"></i>
-                            </a>
-                            <a href="{{ url('admin/posts/delete/'~post.id) }}" tooltip="tooltip" title="Deletar">
-                                <i class="fa-solid fa-trash m-1"></i>
-                            </a>
-
-                        </td>
+                       
                     </tr>
 
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="info{{post.id}}">
