add link config email

--- a/templates/admin/views/menu.html.twig
+++ b/templates/admin/views/menu.html.twig
@@ -18,7 +18,13 @@
                     <i class="fa-solid fa-chart-line"></i>
                     <span>Dasboard</span>
                 </a>
-            </li>  
+            </li> 
+            <li>
+                <a href="{{url('admin/mail')}}" tooltip="tooltip" title="Mail">
+                    <i class="fa-regular fa-envelope"></i>
+                    <span>Configuração de E-mail</span>
+                </a>
+            </li>   
             <li>
                 <a href="{{url('admin/posts/lists')}}" tooltip="tooltip" title="Administração de Posts">
                     <i class="fa-solid fa-file-pen"></i>
