--- a/templates/admin/views/menu.html.twig
+++ b/templates/admin/views/menu.html.twig
@@ -20,7 +20,7 @@
                 </a>
             </li> 
             <li>
-                <a href="{{url('admin/mail')}}" tooltip="tooltip" title="Mail">
+                <a href="{{url('admin/config')}}" tooltip="tooltip" title="Mail">
                     <i class="fa-regular fa-envelope"></i>
                     <span>Configuração de E-mail</span>
                 </a>
