--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -1,76 +1,77 @@
 <header class="p-3 text-bg-dark">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="{{url('/')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none logo">
-                <img src="{{ url('templates/site/assets/img/php-logo.svg') }}" alt="php8.1" height="22" width="60">
-            </a>
-
-            <ul class="navbar navbar-dark bg-dark col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li>
-                    <a href="{{ url('/')}}" class="nav-link px-2" tooltip="tooltip" title="Página Inicial">Home</a>
-                </li>
-                <li>
-                    <a href="{{ url('sobre') }}" class="nav-link px-2 text-white" tooltip="tooltip" title="Sobre Nós">Sobre nós</a>
-                </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Categorias
-                </a>
-                <ul class="dropdown-menu">
-                    {% for category in categories %}
+            <a href="{{ url('/') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none logo">
+                <img src="{{ url('templates/site/assets/img/php-logo.svg') }}" alt="php8.1" height="22" width="60"></a>
+                <ul class="navbar navbar-dark bg-dark col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li>
-                        <a class="dropdown-item" href="{{url('category/'~category.slug)}}" tooltip="tooltip" title="{{category.title}}">
-                            {{category.title}}
+                        <a href="{{ url('/') }}" class="nav-link px-2" tooltip="tooltip" title="Página Inicial">
+                            Home
                         </a>
                     </li>
-                    {% endfor %}
+                    <li>
+                        <a href="{{ url('sobre') }}" class="nav-link px-2 text-white" tooltip="tooltip" title="Sobre Nós">
+                            Sobre nós
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Categorias
+                        </a>
+                        <ul class="dropdown-menu">
+                            {% for category in categories %}
+                                <li>
+                                    <a class="dropdown-item" href="{{ url('category/'~category.slug) }}" tooltip="tooltip" title="{{ category.title }}">
+                                        {{ category.title }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    <li>
+                    <a href="{{ url('contato')}}" class="nav-link px-2" tooltip="tooltip" title="Fale Conosco">Fale Conosco</a>
+                </li>
                 </ul>
-            </li>
-            </ul>
-
-            <form data-url-search="{{ url('search') }}" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" name="search" id="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..." aria-label="Search">
-            </form>                
-
-            <div class="text-end">
-                {% if user().level == 3 %}
-                <div class="btn-group">
-                    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                        <i class="fa-solid fa-user me-2"></i> {{user().name}}   
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-lg-end">
-                        <li>
-                            <a class="dropdown-item" href="{{url('admin/dashboard/')}}" tooltip="tooltip" title="Dashboard">
-                                Painel Administrativo
+                <form data-url-search="{{ url('search') }}" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                    <input type="search" name="search" id="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..." aria-label="Search"></form>
+                    <div class="text-end">
+                        {% if user().level == 3 %}
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                                    <i class="fa-solid fa-user me-2"></i>
+                                    {{ user().name }}
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-lg-end">
+                                    <li>
+                                        <a class="dropdown-item" href="{{ url('admin/dashboard/') }}" tooltip="tooltip" title="Dashboard">
+                                            Painel Administrativo
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="{{ url('admin/users/edit/'~user().id) }}" tooltip="tooltip" title="Perfil">
+                                            Perfil
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item text-danger" href="{{ url('admin/exit') }}" tooltip="tooltip" title="Sair do Sistema">
+                                            Sair
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        {% elseif user().level == 1 %}
+                            Usuário Logado
+                        {% else %}
+                            <a href="{{ url('admin/login') }}" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
+                                Entrar
                             </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="{{url('admin/users/edit/'~user().id)}}" tooltip="tooltip" title="Perfil">
-                                Perfil
+                            <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
+                                Cadastre-se
                             </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item text-danger" href="{{url('admin/exit')}}" tooltip="tooltip" title="Sair do Sistema">
-                                Sair
-                            </a>
-                        </li>
-                    </ul>
+                        {% endif %}
+                    </div>
                 </div>
-                {% elseif user().level == 1 %}
-                Usuário Logado
-                {% else %}
-                <a href="{{url('admin/login')}}" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
-                    Entrar
-                </a>
-                <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
-                    Cadastre-se
-                </a>
-                {% endif %}
-
+                <div class="my-3" id="request"></div>
             </div>
-        </div>
-
-        <div class="my-3" id="request"></div>
-
-    </div>
-</header>
+        </header>
+        
