--- a/templates/site/views/index.html.twig
+++ b/templates/site/views/index.html.twig
@@ -2,10 +2,10 @@
 {% block content %}
 
     <div class="container my-5">
-
+    {{ flash }}
         <div class="row">
             <div class="col-lg-9 col-md-12">
-
+              
                 {% if posts.slides %}
                     <div id="slide" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
