--- a/templates/site/assets/css/site.css
+++ b/templates/site/assets/css/site.css
@@ -1,3 +1,13 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+.content-wrapper {
+    flex: 1;
+}
+
 body {
     background: #f9f9f9
 }
@@ -83,3 +93,4 @@ a:hover {
     font-size: 10em;
     color: #999
 }
+
