--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -65,7 +65,7 @@
                             <a href="{{ url('admin/login') }}" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
                                 Entrar
                             </a>
-                            <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
+                            <a href="{{ url('cadastro') }}"class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
                                 Cadastre-se
                             </a>
                         {% endif %}
